--- a/_posts/2018-05-01-Roofs.md
+++ b/_posts/2018-05-01-Roofs.md
@@ -10,6 +10,10 @@ The sky sometimes falls
 
 ![photo][roof]
 
+Let's try this one:
+
+{% flickr 40937807805 "roofee" %}
+
 When we are crying out. 
 
 [roof]: https://flic.kr/p/25nwY1v
