--- a/_posts/2018-05-25-umbria.md
+++ b/_posts/2018-05-25-umbria.md
@@ -10,5 +10,9 @@ After a great stay in Venice, we took the train to Florence, rented cars, and se
 
 It is hard to describe the beauty of this place, the incredible green hilly setting, or the totally relaxing vibe of the pool. Morning runs through the mountains, swimming constantly, cooking in the amazing kitchen, and day trips to the towns of Umbria (Assisi, Perugia, Gubbio). Other highlights of our week include: a day spent with Mac and Francesca’s family near the tiny town of Pettino truffle hunting and enjoying a big meal with their family; a morning spent riding horses through the idyllic mountains, and a chef that came to cook a four-course meal for us at the monastery. 
 
-[photos to come]
+![our place](https://c2.staticflickr.com/2/1727/41443993405_d8ac37c190_z.jpg)
+![truffle hunt](https://farm2.staticflickr.com/1736/42346209521_6ca21cab1e_z_d.jpg)
+![assisi](https://farm2.staticflickr.com/1724/40538940000_59cdefa82d_z_d.jpg)
+![mountains](https://farm2.staticflickr.com/1738/41443970675_ce01ebbafa_z_d.jpg)
+
 
